--- a/heaterController/src/main/AndroidManifest.xml
+++ b/heaterController/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mercedes.vidito.heatercontroller">
-
+    <uses-permission android:name="android.permission.BLUETOOTH" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.mercedes.vidito.heatercontroller.MainActivity">
+        <activity android:name="com.mercedes.vidito.heatercontroller.MainScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
