--- a/heaterController/build.gradle
+++ b/heaterController/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.mercedes.vidito.myapplicationtest"
+        applicationId "com.mercedes.vidito.heatercontroller"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
