--- a/heaterController/src/main/AndroidManifest.xml
+++ b/heaterController/src/main/AndroidManifest.xml
@@ -10,14 +10,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.mercedes.vidito.heatercontroller.MainScreen">
+        <activity android:name=".MainScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.mercedes.vidito.heatercontroller.ServicesScreen">
+        <activity android:name=".ServicesScreen">
         </activity>
+        <service android:name=".BluetoothDeviceService" android:enabled="true"/>
     </application>
     <uses-sdk android:minSdkVersion="18"/>
 
